--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "/server/server.js",
   "scripts": {
     "start": "nodemon ./server/server.js",
-    "start:prod": "NODE_ENV=production nodemon ./server/server.js" ,
-    "seeder" : "node ./server/seeder.js"
+    "start:prod": "NODE_ENV=production nodemon ./server/server.js",
+    "seeder": "node ./server/seeder.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.7"
   }
 }
