--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "react-paypal-button-v2": "^2.6.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.2",
