--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "/server/server.js",
   "scripts": {
-    "start": "nodemon ./server/server.js",
+    "start": "node ./server/server.js",
     "start:prod": "NODE_ENV=production nodemon ./server/server.js",
-    "seeder": "node ./server/seeder.js"
+    "seeder": "node ./server/seeder.js" ,
+    "heroku:postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client "
   },
   "keywords": [],
   "author": "",
