--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "/server/server.js",
   "scripts": {
     "start": "node ./server/server.js",
-    "start:prod": "NODE_ENV=production nodemon ./server/server.js",
+    "start:prod": "NODE_ENV=production node ./server/server.js",
     "seeder": "node ./server/seeder.js" ,
-    "heroku:postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client "
+    "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client "
   },
   "keywords": [],
   "author": "",
