--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "/server/server.js",
   "scripts": {
     "start": "node ./server/server.js",
+    "dev" : "nodemon ./server/server.js" ,
     "start:prod": "NODE_ENV=production node ./server/server.js",
     "seeder": "node ./server/seeder.js" ,
     "heroku-postbuild" : "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client "
